--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         <span class="icon-bar"></span>
                     </button>
                     <a class="navbar-brand" href="index.html">
-                        <img src="assets/img/logo.png" alt="Site Logo">
+                        <img src="logo.png" alt="Site Logo">
                     </a>
                 </div>
 
@@ -63,7 +63,7 @@
                             <div class="row">
                                 <div class="col-md-3">
                                     <a href="single_blog_page.html">
-                                        <img src="assets/img/corporate.jpg" class="img-thumbnail center-block" alt="Blog Post Thumbnail">
+                                        <img src="corporate.jpg" class="img-thumbnail center-block" alt="Blog Post Thumbnail">
                                     </a>
                                 </div>
                                 <div class="col-md-9">
@@ -85,7 +85,7 @@
                             <div class="row">
                                 <div class="col-md-3">
                                     <a href="#">
-                                        <img src="assets/img/event.jpg" class="img-thumbnail center-block" alt="Blog Post Thumbnail">
+                                        <img src="event.jpg" class="img-thumbnail center-block" alt="Blog Post Thumbnail">
                                     </a>
                                 </div>
                                 <div class="col-md-9">
