--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         <title>Theme Blog - Web Template Design</title>
         
         <!-- stylesheets -->
-        <link rel="stylesheet" href="\bootstrap.min.css">
-        <link rel="stylesheet" href="\font-awesome.min.css">
-        <link rel="stylesheet" href="\animate.css">
-        <link rel="stylesheet" href="\style.css">
+        <link rel="stylesheet" href="/bootstrap.min.css">
+        <link rel="stylesheet" href="/font-awesome.min.css">
+        <link rel="stylesheet" href="/animate.css">
+        <link rel="stylesheet" href="/style.css">
 
     </head>
 
